--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=apil
-PASSWORD=apil123
+DATABASE=mongodb+srv://apilbasnet:<db_password>@cluster0.seycnbt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+USERNAME=apilbasnet
+DATABASE_PASSWORD=apilbasnet
