--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "apil basnet",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
