--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "slugify": "^1.6.6",
     "validator": "^13.15.0",
